--- a/index.html
+++ b/index.html
@@ -133,22 +133,22 @@
         <button class="plan-button">Sign Up</button>
       </div>
       <div class="pricing-plan">
-        <div class="plan-title">Standard</div>
-        <div class="plan-price">$19.99/month</div>
+        <div class="plan-title">GST Consultancy</div>
+        <div class="plan-price">Rs.1500 per month</div>
         <ul class="plan-features">
-          <li>✅ 50GB Storage</li>
-          <li>✅ 5 Users</li>
-          <li>✅ Phone &amp; Email Support</li>
+          <li>✅ Periodical Returns</li>
+          <li>✅ GST Related Accounting Suggestions</li>
+          <li>✅ GST Due diligence</li>
         </ul>
         <button class="plan-button">Sign Up</button>
       </div>
       <div class="pricing-plan">
-        <div class="plan-title">Premium</div>
-        <div class="plan-price">$49.99/month</div>
+        <div class="plan-title">Financial Due Diligence</div>
+        <div class="plan-price">Rs.50,000 per project</div>
         <ul class="plan-features">
-          <li>✅ 100GB Storage</li>
-          <li>✅ 10 Users</li>
-          <li>✅ 24/7 Support</li>
+          <li>✅ Core analysis report & suggestions</li>
+          <li>✅ Due Diligence Report</li>
+          <li>✅ Competitor Analysis</li>
         </ul>
         <button class="plan-button">Sign Up</button>
       </div>
