--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <style>
 
       html {
-        background-color: #e07a5f;
+        background-image: url("./wall4.jpg");
       }
 
       body {
@@ -37,7 +37,9 @@
         border-radius: 10px;
         text-align: center;
         color: white;
-              }
+        box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(10px);
+      }
 
       .plan-features {
         list-style: none;
@@ -86,6 +88,7 @@
         justify-content: center;
         color: #f2f2f2;
         background-color: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(10px);
       }
 
       
